# CRayTracing

./: .gitignore  CMakeLists.txt  README.md
X11-C-Graphics/: .gitignore  CMakeLists.txt
X11-C-Graphics/src/: CMakeLists.txt  x11BaseApp.c
X11-C-Graphics/src/app/: app.c
X11-C-Graphics/src/graphics_utils/: screen_callbacks.h  screen_info_p.h
X11-C-Graphics/src/screen_x11/: screen.c
X11-C-Graphics/src/stb_lib/: stb_ds.h  stb_sprintf.h  stb_truetype.h
cgraphics/: .gitignore  CMakeLists.txt
cgraphics/src/: test_graphics_app.c
cgraphics/src/app/: CMakeLists.txt  app.c  app.h
cgraphics/src/graphics_utils/: common.h  screen_settings.h
cgraphics/src/screen_x11/: screen.c  screen.h
src/: CMakeLists.txt  geometric_object.h  main.c  normal.h  point.h  rgb_color.h  shade_rec.h  test_graphics_app.c  vector.h  vector3.r  world.h
src/app/: CMakeLists.txt  app.c
src/cameras/: camera.h  orthographic_camera.c  orthographic_camera.h
src/geometric_objects/: geometric_object.h  plane.c  plane.h  sphere.c  sphere.h
src/graphics_utils/: CMakeLists.txt  common.c  common.h  font.c  font.h  input_keys.h  screen_info.c  screen_info.h
src/screen_x11/: CMakeLists.txt  screen.c  screen.h
src/stb_lib/: stb_image.h
src/tracers/: multiple_obj_tracer.c  multiple_obj_tracer.h  tracer.h
src/utilities/: constants.c  constants.h  normal.h  ray.h  shade_rec.h  vector.h  vector3.r  view_plane.h
src/worlds/: world.h
